--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,8 @@ block content
     |  using 
     a(href="https://instances.hyper.lol/") multiple cobalt instances.
     |  The dataset has about 36,000 YouTube songs.
+  p source code: 
+    a(href='https://github.com/stdio2016/chad-downloader') https://github.com/stdio2016/chad-downloader
   h2 Download status
   p Total: 
     span= count.total
